Add fields to election, update endpoint for validating imported election (#1523)
